--- a/process-start/src/PatternBar.css
+++ b/process-start/src/PatternBar.css
@@ -2,6 +2,7 @@
   background: #ededed;
   position: absolute;
   width: 163px;
+  padding-left: 8px;
   height: 1000px;
 }
 
